# bevy_boids_demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: agouti.blend  agouti.glb  house_crow.blend  house_crow.glb
src/: anim.rs  boids.rs  bounds.rs  crows.rs  flight.rs  jay_math.rs  main.rs  observe.rs  velocitator.rs
