[package]
name = "bevy_boids_demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
lerp = { version = "0.4.0" }
rand = { version = "0.8.5" }
big-brain = { version = "0.12.0" }
bevy_egui = "0.16"
bevy_editor_pls = "0.1.1"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
